# agent-skill-infra

./: .gitignore  AGENT.md  AGENTS.md  README.md  llms.txt  pyproject.toml
.agents/skills/agent-skill-infra/: SKILL.md
.agents/skills/agent-skill-infra/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: agent-skill-infra-instincts.yaml
.codex/: AGENTS.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  test-request.yml
.github/pull_request_template/: agent.md
.github/workflows/: ci.yml  codeql.yml  issue-test.yml  pages.yml  pre-flight.yml  publish.yml
docs/: index.html
docs/history/: DAILY_LOG_2026-05-01.md  MEMORY_backup.md  RETROSPECTIVE.md  research_report_agent_skill_dependencies.md  research_report_agent_skill_infra_feasibility.md  research_report_agent_skill_infra_solutions.md  research_report_integrated_solution_v3.md  research_report_integrated_solution_v4.md  research_report_skill_dev_test_practices.md
docs/reports/: 2026-05-01_agent-skill-infra_self-check.md  2026-05-01_ci-safety-upgrade.md  2026-05-01_everything-claude-code.md  2026-05-01_oh-my-openagent.md
docs/research/: from-paper-to-code.md  llm-judge-literature-review.md  next-steps.md
scripts/ci/: issue_tester.py  pre_flight.py
skills/quality-check/: SKILL.md
skills/test-runner/: SKILL.md  evals.json
skills/version-aware/: SKILL.md
src/skill_infra/: __init__.py
src/skill_infra/quality_check/: __init__.py  auto_fix.py  capability_discovery.py  checkers.py  cli.py  gh_model_quality.py  linter_adapter.py  llm_quality.py  parser.py  scorecard.py  security_integration.py
src/skill_infra/shared/: __init__.py  adapter.py  evals_schema.py  tool_adapter.py  types.py
src/skill_infra/test_runner/: auto_evals.py  cli.py  report.py  runner.py  snapshot.py
src/skill_infra/test_runner/adapters/: __init__.py  mock.py
src/skill_infra/test_runner/judgers/: __init__.py  base.py  flow.py  keyword.py  llm_judge.py  llm_stub.py  schema.py  snapshot_judge.py
src/skill_infra/version_aware/: __init__.py  cli.py  git_diff.py  narrative.py  regression.py  rollback.py  security_diff.py
tests/: test_catalog.py  test_issue_tester.py  test_pre_flight.py  test_smoke.py
tests/quality_check/: test_auto_fix.py  test_capability_discovery.py  test_checkers.py  test_cli.py  test_gh_model_quality.py  test_linter_adapter.py  test_llm_quality.py  test_parser.py  test_scorecard.py
tests/shared/: test_evals_schema.py  test_types.py
tests/test_runner/: test_adapters.py  test_auto_evals.py  test_cli.py  test_flow_judge.py  test_judgers.py  test_llm_judge.py  test_runner.py  test_snapshot.py  test_snapshot_judge.py  test_tool_adapter.py
tests/version_aware/: test_cli.py  test_git_diff.py  test_narrative.py  test_regression.py
