[project]
name = "agent-skill-infra"
version = "0.3.0"
description = "Agent Skill infrastructure: quality check, behavior test runner, version awareness"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Liber1917" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Version Control",
]
dependencies = [
    "typer>=0.25.1",
    "rich>=15.0.0",
    "jsonschema>=4.26.0",
]

[project.urls]
Homepage = "https://github.com/Liber1917/agent-skill-infra"
Repository = "https://github.com/Liber1917/agent-skill-infra"
Issues = "https://github.com/Liber1917/agent-skill-infra/issues"

[project.scripts]
skill-test = "skill_infra.test_runner.cli:app"
skill-quality = "skill_infra.quality_check.cli:app"
skill-version = "skill_infra.version_aware.cli:app"

[project.optional-dependencies]
llm = ["httpx>=0.28.1"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "pyright>=1.1.409",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/skill_infra/test_runner/cli.py" = ["B008"]
"src/skill_infra/quality_check/cli.py" = ["B008"]
"src/skill_infra/version_aware/cli.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["skill_infra"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_infra"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
